# dorsal-ronflex

./: .gitignore  README.md  install.sh  pyproject.toml
docs/: example_config.json
dorsal_ronflex/: event.py  extraction.py  main.py  plots.py  settings.py  simplified_abf.py
dorsal_ronflex/analyse/: analysis.py  simplified_abf.py
dorsal_ronflex/analysis/: analysis.py
dorsal_ronflex/extract/: extraction.py
dorsal_ronflex/signals/: create_signals.py  signal.py  spike.py
dorsal_ronflex/spikes/: create_spikes.py  spike.py
dorsal_ronflex/sweep/: area.py  create_sweep.py  event_bondaries.py  sweep.py
